# mallet_fine_tuning

./: .gitignore  Mallet_Fine_Tuning.ipynb  README.md  clean_notebook.py
backend/: audit_db.py  build_database.py  eval.py  eval_results.json  eval_set.json  main.py  pyproject.toml
backend/data/: Marimba.md  marimba_mallets_dataset.csv
frontend/src/: App.css  App.jsx  index.css
