[project]
name = "mallet-fine-tuning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.9",
    "faiss-cpu>=1.13.2",
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "langchain>=1.2.17",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "llama-cpp-python>=0.3.22",
    "llama-index>=0.14.21",
    "llama-stack>=0.2.12",
    "pandas>=3.0.2",
    "pypdf>=6.10.2",
    "sentence-transformers>=5.4.1",
]
